[tool.poetry]
name = "asteria"
version = "0.0.0" # handled by poetry-dynamic-versioning
description = "Prometheus pull server for Hermes database metrics"
authors = ["Bink <backend@bink.com>"]
readme = "README.md"
packages = [{include = "asteria"}]
repository = "https://github.com/binkhq/asteria"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "azure"
url = "https://pkgs.dev.azure.com/binkhq/_packaging/binkhq/pypi/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^20.1.0"
bink-logging-utils = {extras = ["gunicorn"], version = "^1.3.0", source="azure"}
psycopg = "^3.1.18"
pydantic-settings = "^2.2.1"
prometheus-client = "^0.20.0"
falcon = "^3.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
xenon = "^0.9.0"
refurb = "^1.17.0"
ipython = "^8.14.0"
werkzeug = "^2.3.6"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
vcs = "git"
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ['asteria/version.py']

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_incomplete_defs = true
warn_redundant_casts = true
plugins = [
    "pydantic.mypy",
]

[tool.ruff]
line-length = 120
output-format = "full"
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",    # Pyflakes (F)
    "E",
    "W",    # pycodestyle (E, W)
    "C90",  # mccabe (C90)
    "I",    # isort (I)
    # pydocstyle (D)
    "UP",   # pyupgrade (UP)
    "N",    # pep8-naming (N)
    "YTT",  # flake8-2020 (YTT)
    # "ANN",  # flake8-annotations (ANN)
    # "S",    # flake8-bandit (S)
    "BLE",  # flake8-blind-except (BLE)
    # flake8-boolean-trap (FBT)
    "B",    # flake8-bugbear (B)
    "A",    # flake8-builtins (A)
    "C4",   # flake8-comprehensions (C4)
    "T10",  # flake8-debugger (T10)
    # flake8-errmsg (EM)
    "ICN",  # flake8-import-conventions (ICN)
    "T20",  # flake8-print (T20)
    # "PT",   # flake8-pytest-style (PT)
    "Q",    # flake8-quotes (Q)
    # flake8-return (RET)
    "SIM",  # flake8-simplify (SIM)
    "TID",  # flake8-tidy-imports (TID)
    "ARG",  # flake8-unused-arguments (ARG)
    "DTZ",  # flake8-datetimez (DTZ)
    "ERA",  # eradicate (ERA) until we can remove commented out code this has to stay deactivated
    # pandas-vet (PD)
    # pygrep-hooks (PGH)
    "PLC",
    "PLE",
    "PLR",
    "PLW",  # Pylint (PLC, PLE, PLR, PLW)
    "RUF",  # Ruff-specific rules (RUF)
]

[tool.refurb]
ignore = [
    "FURB184",  # some chaining suggestions don't make sense
]
